--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -10,7 +10,7 @@
 	<wsv wide="30px"></wsv>
 	<div>
 
-		Horizontal Scroll Disiniahsdkjahsdkjhaskjhdkajsaskdhkajshdkjhkajshkjdhakjhsdkjashdkjashkjahsdkajhkjdh
+		<address-button-notif></address-button-notif>
 
 	</div>
 	<wsv wide="30px"></wsv>
