--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -18,6 +18,7 @@ $abu-abu-sesuatu-2: #a6a6a6;
 $merah-terang: #F12627;
 $abu-abu-gelap-terang: #5F5F5F;
 $abu-abu-terang-summary: #EEEEEE;
+$kuning-emas: #FBB829;
 
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
