--- a/src/app/modules/approval/components/address-button-notif/address-button-notif.component.html
+++ b/src/app/modules/approval/components/address-button-notif/address-button-notif.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-around">
 	<div *ngFor="let listApproval of listApprovals">
 		<div class="address-button-label"
-			[ngClass]="selected == listApproval ? 'selected' : ''"><a>{{listApproval.name}}</a>
+			[ngClass]="selectedopt == listApproval ? 'selected' : ''"><a>{{listApproval.name}}</a>
 			<div class="warn-notif"
 				[ngClass]="{'show':listApproval.qty > 0,'hide':listApproval == 0}"></div>
 		</div>
