--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -15,8 +15,7 @@
 	</div>
 	<wsv wide="30px"></wsv>
 	<div>
-
-		Filter DISINIASJDKAJSDKAJDKAJDASDJAKDJAJSDKSJK
+		<nest-datepicker-a></nest-datepicker-a>
 	</div>
 
 	<wsv wide="29px"></wsv>
