--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 @import '~@angular/material/theming';
 @import '~bootstrap/dist/css/bootstrap.css';
 @import './variables/colors';
+@import './variables/fonts';
 html,
 body {
 	height: 100%;
@@ -94,4 +95,31 @@ button:focus {
 
 .cdk-global-scrollblock {
 	position: static;
+}
+
+ngb-datepicker {
+	border: 0px !important;
+	border-radius: 0em !important;
+	.ngb-dp-header {
+		display: none;
+	}
+
+	.ngb-dp-month-name {
+		display: none;
+	}
+
+	.ngb-dp-weekdays {
+		border-bottom: 0;
+		background-color: transparent;
+		font-style: normal !important;
+	}
+	.ngb-dp-weekday {
+		color: #000000;
+		font-style: normal !important;
+		font-family: $primary-font;
+		font-style: normal;
+		font-weight: 600;
+		font-size: 14px;
+		/* identical to box height */
+	}
 }
