--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -14,9 +14,7 @@
 
 	</div>
 	<wsv wide="30px"></wsv>
-	<div>
-		<nest-datepicker-a></nest-datepicker-a>
-	</div>
+
 	<div class="d-flex align-items-center">
 		<div class="flex-grow-1 d-flex ">
 			<filter-dropdown class="flex-even"></filter-dropdown>
@@ -26,10 +24,7 @@
 				logo="../../../../assets/image/icons/searchbutton.png"
 				[disabled]="false"></filter-input>
 			<wsh wide="24px"></wsh>
-			<filter-input class="flex-even"
-				hint="Tanggal"
-				[disabled]="true"
-				logo="../../../../assets/image/icons/calendar_icon.png"></filter-input>
+			<filter-date class="flex-even"></filter-date>
 		</div>
 		<wsh wide="24px"></wsh>
 
