--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -1,58 +1,106 @@
 <div class="container">
-	<wsv wide="24px"></wsv>
-	<div id="keranjang-label">APPROVAL</div>
-	<wsv wide="7px"></wsv>
-	<div class="d-flex justify-content-center">
+	<div id="top-fixed">
+		<wsv wide="24px"></wsv>
+		<div id="keranjang-label">APPROVAL</div>
+		<wsv wide="7px"></wsv>
+		<div class="d-flex justify-content-center">
 
-		<item-summary-dropdown></item-summary-dropdown>
+			<item-summary-dropdown></item-summary-dropdown>
 
-	</div>
-	<wsv wide="30px"></wsv>
-	<div>
-
-		Horizontal Scroll Disiniahsdkjahsdkjhaskjhdkajsaskdhkajshdkjhkajshkjdhakjhsdkjashdkjashkjahsdkajhkjdh
-
-	</div>
-	<wsv wide="30px"></wsv>
-
-	<div class="d-flex align-items-center">
-		<div class="flex-grow-1 d-flex ">
-			<filter-dropdown class="flex-even"></filter-dropdown>
-			<wsh wide="24px"></wsh>
-			<filter-input class="flex-even"
-				hint="Cari Pesanan"
-				logo="../../../../assets/image/icons/searchbutton.png"
-				[disabled]="false"></filter-input>
-			<wsh wide="24px"></wsh>
-			<filter-date class="flex-even"></filter-date>
 		</div>
-		<wsh wide="24px"></wsh>
+		<wsv wide="30px"></wsv>
+		<div>
+			Horizontal Scroll Disiniahsdkjahsdkjhaskjhdkajsaskdhkajshdkjhkajshkjdhakjhsdkjashdkjashkjahsdkajhkjdh
+		</div>
+		<wsv wide="30px"></wsv>
 
-		<reset-filter-button class="d-flex align-items-center"></reset-filter-button>
+		<div class="d-flex align-items-center">
+			<div class="flex-grow-1 d-flex ">
+				<filter-dropdown class="flex-even"></filter-dropdown>
+				<wsh wide="24px"></wsh>
+				<filter-input class="flex-even"
+					hint="Cari Pesanan"
+					logo="../../../../assets/image/icons/searchbutton.png"
+					[disabled]="false"></filter-input>
+				<wsh wide="24px"></wsh>
+				<filter-date class="flex-even"></filter-date>
+			</div>
+			<wsh wide="24px"></wsh>
+
+			<reset-filter-button class="d-flex align-items-center"></reset-filter-button>
 
 
+		</div>
+
+		<wsv wide="29px"></wsv>
+
+
+		<div class="d-flex">
+			<wsh wide="13px"></wsh>
+			<check-box-round [checked]="true"
+				allowChanges="true"></check-box-round>
+		</div>
 	</div>
 
-	<wsv wide="29px"></wsv>
-
-
-	<div class="d-flex">
-		<wsh wide="13px"></wsh>
-		<check-box-round [checked]="true"
-			allowChanges="true"></check-box-round>
-	</div>
 </div>
 
 
-
-<wsv wide="150px"></wsv>
+<wsv wide="310px"></wsv>
 <div class="container d-flex">
 
 	<div id="left-container">
+		<div> Testing Testing Testing Testing Testing Testing Testing Testing Testing Testing Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
+		<div>Testing Testing</div>
 
-		Item List Disiniahsdkjahsdkjhaskjhdkajsaskdhkajshdkjhkajshkjdhakjhsdkjashdkjashkjahsdkajhkjdh
-
-
+		<wsv wide="60px"></wsv>
 	</div>
 
 	<div id="right-container">
