--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -82,57 +82,7 @@
 <div class="container d-flex">
 
 	<div id="left-container">
-		<div> Testing Testing Testing Testing Testing Testing Testing Testing Testing Testing Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-		<div>Testing Testing</div>
-
+		TEsting testing testing eisjdl lskdjlajldkajdlkj alksjd alksjdlkasjdlka jdlkasj dlajklakjda
 		<wsv wide="60px"></wsv>
 	</div>
 
