--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -72,17 +72,14 @@
 			<check-box-round [checked]="true"
 				allowChanges="true"></check-box-round>
 		</div>
-		<wsv wide="15px"></wsv>
 	</div>
 
 </div>
-
-
-<wsv wide="327px"></wsv>
+<wsv wide="370px"></wsv>
 <div class="container d-flex">
 
 	<div id="left-container">
-		TEsting testing testing eisjdl lskdjlajldkajdlkj alksjd alksjdlkasjdlka jdlkasj dlajklakjda
+		<item-approval></item-approval>
 		<wsv wide="60px"></wsv>
 	</div>
 
