--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -79,8 +79,9 @@
 <div class="container d-flex">
 
 	<div id="left-container">
-		<item-approval></item-approval>
-		<wsv wide="60px"></wsv>
+		<item-list-section></item-list-section>
+		<wsv wid
+			e="60px"></wsv>
 	</div>
 
 	<div id="right-container">
