--- a/src/app/modules/approval/components/item-approval/item-approval.component.html
+++ b/src/app/modules/approval/components/item-approval/item-approval.component.html
@@ -1,80 +1,83 @@
-<div class="rounded-gray">
-	<div id="header"
-		class="d-flex align-items-center">
-		<div id="purchaser-col-1"
+<div id="wrapper-item-approval">
+	<div class="rounded-gray">
+		<div id="header"
 			class="d-flex align-items-center">
-			<check-box-round [checked]="true"
-				allowChanges="true"></check-box-round>
-			<wsh wide="8.54px"></wsh>
-			<div id="purchaser-col-1">
-				<div id="purchaser-label">Purchaser 1</div>
-				<div id="purchase-date">14 Juni 2020</div>
-			</div>
-		</div>
-		<wsh wide="11px"></wsh>
-		<div class="d-flex align-items-center justify-content-between flex-grow-1">
-
-			<div id="purchaser-col-2"
+			<div id="purchaser-col-1"
 				class="d-flex align-items-center">
-				<div>
-					<div class="label-gray">Ongkos Kirim</div>
-					<div class="label-gray-2">Rp. 1.000.000</div>
+				<check-box-round [checked]="true"
+					allowChanges="true"></check-box-round>
+				<wsh wide="8.54px"></wsh>
+				<div id="purchaser-col-1">
+					<div id="purchaser-label">Purchaser 1</div>
+					<div id="purchase-date">14 Juni 2020</div>
 				</div>
 			</div>
+			<wsh wide="11px"></wsh>
+			<div class="d-flex align-items-center justify-content-between flex-grow-1">
 
-			<div id="purchaser-col-3"
-				class="d-flex align-items-center">
-				<div>
-					<div class="label-gray d-flex flex-row-reverse">Ongkos Kirim</div>
-					<div class="d-flex flex-row-reverse label-gray-2">Rp. 1.000.000</div>
-				</div>
-			</div>
-		</div>
-
-	</div>
-	<div id="content"
-		class="d-flex">
-		<img src='../../../../../assets/image/icons/macbook_a.png'
-			id="item-img">
-		<wsh wide="15px"></wsh>
-		<div id="item-desc-wrapper">
-			<item-desc></item-desc>
-			<wsv wide="6px"></wsv>
-			<div class="gray-label-3">Jumlah: 3 Barang</div>
-		</div>
-
-	</div>
-</div>
-
-<div id="masking"
-	class="rounded-gray">
-</div>
-
-<div id="above-masking"
-	class="rounded-gray">
-	<div id="header"
-		class="d-flex align-items-center">
-
-	</div>
-	<div id="content"
-		class="d-flex transparent">
-		<wsh wide="157px"></wsh>
-		<div id="item-desc-wrapper"></div>
-		<div class="d-flex flex-grow-1 flex-row-reverse align-items-end">
-			<div>
-				<div class="d-flex flex-row-reverse">
-					<div id="out-of-stock"
-						class="d-flex justify-content-center align-items-center">
-						Out Of Stock
+				<div id="purchaser-col-2"
+					class="d-flex align-items-center">
+					<div>
+						<div class="label-gray">Ongkos Kirim</div>
+						<div class="label-gray-2">Rp. 1.000.000</div>
 					</div>
 				</div>
-				<wsv wide="9px"></wsv>
-				<div id="tolak-button"
-					class="d-flex flex-row-reverse">
-					Tolak
+
+				<div id="purchaser-col-3"
+					class="d-flex align-items-center">
+					<div>
+						<div class="label-gray d-flex flex-row-reverse">Ongkos Kirim</div>
+						<div class="d-flex flex-row-reverse label-gray-2">Rp. 1.000.000</div>
+					</div>
 				</div>
 			</div>
 
 		</div>
+		<div id="content"
+			class="d-flex">
+			<img src='../../../../../assets/image/icons/macbook_a.png'
+				id="item-img">
+			<wsh wide="15px"></wsh>
+			<div id="item-desc-wrapper">
+				<item-desc></item-desc>
+				<wsv wide="6px"></wsv>
+				<div class="gray-label-3">Jumlah: 3 Barang</div>
+			</div>
+
+		</div>
 	</div>
+
+	<div id="masking"
+		class="rounded-gray">
+	</div>
+
+	<div id="above-masking"
+		class="rounded-gray">
+		<div id="header"
+			class="d-flex align-items-center">
+
+		</div>
+		<div id="content"
+			class="d-flex transparent">
+			<wsh wide="157px"></wsh>
+			<div id="item-desc-wrapper"></div>
+			<div class="d-flex flex-grow-1 flex-row-reverse align-items-end">
+				<div>
+					<div class="d-flex flex-row-reverse">
+						<div id="out-of-stock"
+							class="d-flex justify-content-center align-items-center">
+							Out Of Stock
+						</div>
+					</div>
+					<wsv wide="9px"></wsv>
+					<div id="tolak-button"
+						class="d-flex flex-row-reverse">
+						Tolak
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+
 </div>
