--- a/src/app/modules/approval/components/address-notif/address-notif.component.html
+++ b/src/app/modules/approval/components/address-notif/address-notif.component.html
@@ -1,7 +1,7 @@
 <div class="address-button-label"
 	[ngClass]="selected == label ? 'selected' : ''"
 	(click)="klik()">
-	{{label.name}}
+	<span class="asoy">{{label.name}}</span>
 	<div class="warn-notif"
 		[ngClass]="{'show':label.qty > 0,'hide':label.qty == 0}">
 	</div>
