Revisi Layout (Header, Cart, Modal)

--- a/src/app/layout/components/header-category-button/header-category-button.component.html
+++ b/src/app/layout/components/header-category-button/header-category-button.component.html
@@ -6,8 +6,8 @@
 	<div class="d-flex justify-content-center align-items-center"
 		ngbDropdownToggle>
 		<img id="headers-menubar"
-			src="../../../../assets/image/icons/categoriesiconmenu.png">
-		<div id="headers-kategori">Kategori</div>
+			src="../../../../assets/image/icons/categories-menu.svg">
+		<div id="headers-kategori">KATEGORI</div>
 	</div>
 	<div ngbDropdownMenu
 		id="transparent-box"
