--- a/src/app/modules/approval/components/approval-result-confirmation-dialog/approval-result-confirmation-dialog.component.html
+++ b/src/app/modules/approval/components/approval-result-confirmation-dialog/approval-result-confirmation-dialog.component.html
@@ -1,10 +1,9 @@
 <div id="popup-wording">
-	<p>10 barang akan diproses, 3 out of stok. Proses Barang yang tersedia?</p>
+	<p>Proses approval anda berhasil. Lihat transaksi?</p>
 </div>
 <div id="popup-option">
 	<div id="popup-option-button">
 		<div align="center">
-
 			<div class="divbutton-left"
 				(click)="tutupModal()">Kembali</div>
 		</div>
@@ -12,7 +11,7 @@
 	<div id="popup-option-button">
 		<div align="center">
 			<div class="divbutton-right"
-				(click)="proses()">Proses</div>
+				(click)="lihatTransaksi()">Ok</div>
 		</div>
 	</div>
 </div>
