--- a/src/app/shared/components/cart-item-list/cart-item-list.component.html
+++ b/src/app/shared/components/cart-item-list/cart-item-list.component.html
@@ -23,11 +23,11 @@
 					style="background-color: {{items.itemColor}}"></div>
 			</div>
 		</div>
-		<wsv wide="14px"></wsv>
 		<div id="item-list-weight">
-			<div id="item-list-weight-left">Berat</div>
+			<div id="item-list-weight-left">Berat :</div>
 			<div id="item-list-weight-right">{{items.itemWeight}}</div>
 		</div>
+		<wsv wide="10px"></wsv>
 		<ng-content></ng-content>
 	</div>
 </div>
