--- a/src/app/shared/components/cart-item-list/cart-item-list.component.scss
+++ b/src/app/shared/components/cart-item-list/cart-item-list.component.scss
@@ -21,7 +21,7 @@
 	font-size: 14px;
 	line-height: 19px;
 	font-feature-settings: 'kern' off;
-	width: 100%;
+	width: 90%;
 	height: auto;
 	color: $abu-abu-gelap;
 }
@@ -66,9 +66,11 @@
 	font-weight: 600;
 	font-size: 12px;
 	line-height: 16px;
-	color: $abu-abu-gelap;
-	width: 100%;
-	min-height: 20px;
+	color: $abu-abu-sesuatu;
+	width: 25%;
+	height: 20px;
+	position: relative;
+	float: left;
 }
 
 #rounded-item-wording {
@@ -76,8 +78,8 @@
 	float: left;
 	width: 20px;
 	height: 20px;
-	width: 15%;
-	padding-top: 5px;
+	width: 35%;
+	padding-top: 0px;
 }
 
 #rounded-item-color {
@@ -85,15 +87,16 @@
 	float: left;
 	width: 20px;
 	height: 20px;
-	width: 85%;
+	width: 60%;
 	padding-top: 0px;
+	padding-left:10px;
 }
 
 .rounded-item-color {
 	position: relative;
 	float: left;
-	width: 25px;
-	height: 25px;
+	width: 16px;
+	height: 16px;
 	border-radius: 50%;
 	border: 0.5px solid #f7f7f7;
 	box-sizing: border-box;
@@ -107,8 +110,10 @@
 	font-weight: 600;
 	font-size: 12px;
 	line-height: 16px;
-	color: $abu-abu-gelap;
-	width: 100%;
+	color: $abu-abu-sesuatu;
+	width: 70%;
+	position: relative;
+	float: left;
 }
 
 #item-list-weight-left {
