--- a/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.html
+++ b/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.html
@@ -4,4 +4,5 @@
 	<wsv wide="24px"></wsv>
 	<list-status-section></list-status-section>
 	<filter-buttons-section></filter-buttons-section>
+	<item-transaction></item-transaction>
 </div>
