--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,4 +1,4 @@
-$kresek-merah: #DB0A2A;
+$kresek-merah: #db0a2a;
 $merah-tua-darah: #ab121c;
 $merah-root-beat: #db0a2a;
 $hitam-tok: #000000;
@@ -9,20 +9,21 @@ $box-shadow-2: 0px 10px 20px rgba(0, 0, 0, 0.1);
 $box-shadow-3: 0px 10px 30px rgba(0, 0, 0, 0.1);
 $box-shadow-card: -1px 4px 12px 2px rgba(184, 182, 184, 1);
 $abu-abu: #e5e5e5;
+$abu-abu-2: #f7f7f7;
 $abu-abu-aspal: #8a8a8a;
 $abu-abu-charcoal: #959595;
 $abu-abu-gelap: #606060;
 $abu-abu-gelap-muda: #757575;
 $abu-abu-sesuatu: #a9a9a9;
 $abu-abu-sesuatu-2: #a6a6a6;
-$merah-terang: #F12627;
-$abu-abu-gelap-terang: #5F5F5F;
-$abu-abu-terang-summary: #EEEEEE;
-$kuning-emas: #FBB829;
+$merah-terang: #f12627;
+$abu-abu-gelap-terang: #5f5f5f;
+$abu-abu-terang-summary: #eeeeee;
+$kuning-emas: #fbb829;
 
 $color-primary: $kresek-merah;
 $font-color-light-bg: $hitam-tok;
 $font-color-dark-bg: $putih-gelap-dikit;
 $font-merah-1: $merah-tua-darah;
 $font-merah-2: $merah-root-beat;
-$main-background: $abu-abu;
+$main-background: $abu-abu-2;
