--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.scss
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.scss
@@ -4,7 +4,7 @@
 #top-fixed {
 	position: fixed;
 	width: 1100px;
-	background-color: #e5e5e5;
+	background-color: $main-background;
 	z-index: 1;
 }
 
