--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.html
@@ -7,7 +7,8 @@
 			<div id="keranjang-label">APPROVAL</div>
 			<wsv wide="7px"></wsv>
 			<div class="d-flex justify-content-center">
-				<item-summary-dropdown></item-summary-dropdown>
+				<item-summary-dropdown [list]="listApprovals"
+					(onSelect)="handleSelect($event)"></item-summary-dropdown>
 			</div>
 			<wsv wide="19px"></wsv>
 			<section class="d-flex justify-content-around list-with-scroll">
