--- a/src/app/modules/approval/components/item-approval/item-approval.component.html
+++ b/src/app/modules/approval/components/item-approval/item-approval.component.html
@@ -72,7 +72,8 @@
 					<wsv wide="9px"></wsv>
 					<div id="tolak-button"
 						class="d-flex flex-row-reverse">
-						Tolak
+						<a (click)="actionTolak()"
+							class="tolak">Tolak</a>
 					</div>
 				</div>
 
