--- a/src/app/modules/transaction/components/badge/badge.component.html
+++ b/src/app/modules/transaction/components/badge/badge.component.html
@@ -2,3 +2,31 @@
 	class="d-flex align-items-center justify-content-center">
 	Dibatalkan
 </div>
+
+<div class="d-flex"
+	id="icon-status">
+	<div class="p-2 bd-highlight"
+		id="detail-status">
+		<div class="d-sm-inline-flex"
+			id="kotak-icon">
+			<img src="../../../../../assets/image/icons/icon-processed.svg"></div>
+	</div>
+	<div class="p-2 bd-highlight"
+		id="detail-status">
+		<div class="d-sm-inline-flex"
+			id="kotak-icon">
+			<img src="../../../../../assets/image/icons/icon-delivery.svg"></div>
+	</div>
+	<div class="p-2 bd-highlight"
+		id="detail-status">
+		<div class="d-sm-inline-flex"
+			id="kotak-icon">
+			<img src="../../../../../assets/image/icons/icon-delivered.svg"></div>
+	</div>
+	<div class="p-2 bd-highlight"
+		id="detail-status">
+		<div class="d-sm-inline-flex"
+			id="kotak-icon">
+			<img src="../../../../../assets/image/icons/icon-confirmed.svg"></div>
+	</div>
+</div>
