--- a/src/app/modules/transaction/components/badge/badge.component.scss
+++ b/src/app/modules/transaction/components/badge/badge.component.scss
@@ -12,3 +12,15 @@
 	font-size: 14px;
 	color: #ffffff;
 }
+
+#icon-status{
+	width:70%;position: relative;float: left;height:50px;
+}
+
+#detail-status{
+	min-width:25%;
+}
+
+#kotak-icon{
+	height:24px;width:24px;float:left;border-radius:50%;background-color: #DB0A2A;padding:2px 0px 0px 2px;
+}
