--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -26,16 +26,25 @@
 						id="right-shortcut">
 						<div class="p-2 flex-fill bd-highlight"
 							id="div-approval"
-							(click)="goToPage('./approval')">Approval</div>
+							(click)="goToPage('./approval')">
+							<div class="warn-label">Approval</div>
+							<div class="warn-notif show">6</div>
+						</div>
+
+
 						<div class="p-2 flex-fill bd-highlight"
 							id="div-transaksi"
-							(click)="goToPage('./transaction')">Transaksi</div>
+							(click)="goToPage('./transaction')">
+							<div class="warn-label">Transaksi</div>
+							<div class="warn-notif show">2</div>
+						</div>
 						<div class="p-2 flex-fill bd-highlight"
 							id="div-cart"
 							(click)="goToCart()">
-							<img src="../../../../assets/image/icons/cart-logo.png"
+							<img src="../../../../assets/image/icons/cart-logo.svg"
 								style="width:25px;"
 								id="headers-cart">
+							<div class="warn-notife show">2</div>
 
 						</div>
 					</div>
