--- a/src/app/layout/components/header/header.component.scss
+++ b/src/app/layout/components/header/header.component.scss
@@ -297,3 +297,46 @@
 	margin:0px;
 	padding-top:10px;
 }
+
+.warn-label{
+	position: relative;
+	float: left;
+}
+
+.warn-notif{
+	margin-left:2px;
+	width:14px;
+	height:14px;
+	border-radius: 50%;
+	position: absolute;
+	left:58px;
+	top:2px;
+	float: left;
+	color: $putih-tok;
+	font-size:8px;
+	font-family: $primary-font;
+	line-height: 12px;
+	font-weight: bold;
+	text-align: center;
+}
+
+.show{
+	background-color: $kuning-emas;
+}
+
+.warn-notife{
+	margin-left:2px;
+	width:14px;
+	height:14px;
+	border-radius: 50%;
+	position: absolute;
+	left:30px;
+	top:5px;
+	float: left;
+	color: $putih-tok;
+	font-size:8px;
+	font-family: $primary-font;
+	line-height: 12px;
+	font-weight: bold;
+	text-align: center;
+}
