--- a/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
+++ b/src/app/modules/transaction/components/item-transaction/item-transaction.component.html
@@ -57,7 +57,8 @@
 			</div>
 		</div>
 		<div class="d-flex col-4-trx-item align-items-end">
-			<red-bg-button label="Cari Sejenis"></red-bg-button>
+			<red-bg-button label="Cari Sejenis"
+				(click)="selesai()"></red-bg-button>
 		</div>
 		<wsh wide="20px"></wsh>
 	</div>
