--- a/src/app/modules/approval/components/filter-dropdown/filter-dropdown.component.html
+++ b/src/app/modules/approval/components/filter-dropdown/filter-dropdown.component.html
@@ -1,5 +1,6 @@
 <div #myDrop="ngbDropdown"
-	ngbDropdown>
+	ngbDropdown
+	(openChange)="checkDropDown($event)">
 	<div ngbDropdownToggle
 		id="filter-dropdown-wrapper"
 		class="d-flex">
@@ -13,28 +14,31 @@
 		</div>
 	</div>
 	<div ngbDropdownMenu>
-		<div id="padding-right-for-scroll">
-			<wsv wide="15px">
-			</wsv>
-			<div class="scrollbar"
-				id="style-2">
-				<div>
-					<div *ngFor="let purchaser of purchasers">
-						<div id="item-row"
-							class="d-flex justify-content-between"
-							[ngClass]="selected == purchaser ? 'selected' : '' "
-							(click)="selected=purchaser;myDrop.close()">
-							<div class="item-dropdown-class">
-								{{purchaser}}
-							</div>
 
-						</div>
-						<wsv wide="15px"></wsv>
+
+	</div>
+</div>
+
+<div id="padding-right-for-scroll"
+	[ngClass]="(open)?'':'visibility-hidden'">
+	<wsv wide="15px">
+	</wsv>
+	<div class="scrollbar"
+		id="style-2">
+		<div>
+			<div *ngFor="let purchaser of purchasers">
+				<div id="item-row"
+					class="d-flex justify-content-between"
+					[ngClass]="selected == purchaser ? 'selected' : '' "
+					(click)="selected=purchaser;myDrop.close()">
+					<div class="item-dropdown-class">
+						{{purchaser}}
 					</div>
-				</div>
-			</div>
 
-			<wsv wide="15px"></wsv>
+				</div>
+				<wsv wide="15px"></wsv>
+			</div>
 		</div>
 	</div>
+	<wsv wide="15px"></wsv>
 </div>
