--- a/src/app/modules/approval/components/item-summary-dropdown/item-summary-dropdown.component.html
+++ b/src/app/modules/approval/components/item-summary-dropdown/item-summary-dropdown.component.html
@@ -31,8 +31,8 @@
 		<div>
 			<div *ngFor="let waitingApproval of list;let i = index">
 				<div id="item-row"
-					class="d-flex justify-content-between item-row"
-					[ngClass]="selected == waitingApproval ? 'selected' : '' "
+					class="d-flex justify-content-between {{waitingApproval.name}}"
+					[ngClass]="selected == waitingApproval ? 'selected'  : '' "
 					(click)="clickWaiting(waitingApproval, i);myDrop.close();">
 					<div class="item-dropdown-class">
 						{{waitingApproval.name}}
