--- a/src/app/modules/transaction/components/list-status-section/list-status-section.component.html
+++ b/src/app/modules/transaction/components/list-status-section/list-status-section.component.html
@@ -1,4 +1,5 @@
-<div class="d-flex">
+<div class="d-flex"
+	id="sub-page">
 	<div class="d-flex"
 		*ngFor="let status of statuses">
 		<status-button [label]="status"
