--- a/src/app/modules/transaction/components/badge/badge.component.html
+++ b/src/app/modules/transaction/components/badge/badge.component.html
@@ -1,32 +1,37 @@
-<div id="badge-wrapper"
-	class="d-flex align-items-center justify-content-center">
-	Dibatalkan
+<div [ngClass]="(show == '1')? 'showing' : 'noshowing'">
+	<div id="badge-wrapper"
+		class="d-flex align-items-center justify-content-center">
+		{{label.statustrx}}
+	</div>
 </div>
 
-<div class="d-flex"
-	id="icon-status">
-	<div class="p-2 bd-highlight"
-		id="detail-status">
-		<div class="d-sm-inline-flex"
-			id="kotak-icon">
-			<img src="../../../../../assets/image/icons/icon-processed.svg"></div>
+<div [ngClass]="(show == '0')? 'showing' : 'noshowing'">
+	<div class="d-flex"
+		id="icon-status">
+		<div class="p-2 bd-highlight"
+			id="detail-status">
+			<div class="d-sm-inline-flex"
+				id="kotak-icon">
+				<img src="../../../../../assets/image/icons/icon-processed.svg"></div>
+		</div>
+		<div class="p-2 bd-highlight"
+			id="detail-status">
+			<div class="d-sm-inline-flex"
+				id="kotak-icon">
+				<img src="../../../../../assets/image/icons/icon-delivery.svg"></div>
+		</div>
+		<div class="p-2 bd-highlight"
+			id="detail-status">
+			<div class="d-sm-inline-flex"
+				id="kotak-icon">
+				<img src="../../../../../assets/image/icons/icon-delivered.svg"></div>
+		</div>
+		<div class="p-2 bd-highlight"
+			id="detail-status">
+			<div class="d-sm-inline-flex"
+				id="kotak-icon">
+				<img src="../../../../../assets/image/icons/icon-confirmed.svg"></div>
+		</div>
 	</div>
-	<div class="p-2 bd-highlight"
-		id="detail-status">
-		<div class="d-sm-inline-flex"
-			id="kotak-icon">
-			<img src="../../../../../assets/image/icons/icon-delivery.svg"></div>
-	</div>
-	<div class="p-2 bd-highlight"
-		id="detail-status">
-		<div class="d-sm-inline-flex"
-			id="kotak-icon">
-			<img src="../../../../../assets/image/icons/icon-delivered.svg"></div>
-	</div>
-	<div class="p-2 bd-highlight"
-		id="detail-status">
-		<div class="d-sm-inline-flex"
-			id="kotak-icon">
-			<img src="../../../../../assets/image/icons/icon-confirmed.svg"></div>
-	</div>
+	<div class="label-icon">{{label.statustrx}}</div>
 </div>
