--- a/src/app/modules/transaction/components/status-button/status-button.component.scss
+++ b/src/app/modules/transaction/components/status-button/status-button.component.scss
@@ -7,6 +7,7 @@
 	font-weight: 600;
 	font-size: 14px;
 	line-height: 19px;
+	cursor: pointer;
 	/* identical to box height */
 
 	font-feature-settings: 'kern' off;
