--- a/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.scss
+++ b/src/app/modules/transaction/pages/transaction-layout/transaction-layout.component.scss
@@ -1,17 +1,161 @@
-@import '../../../../../styles/variables/fonts';
 @import '../../../../../styles/variables/colors';
+@import '../../../../../styles/variables/fonts';
 
-.page-header {
+#top-fixed {
+	position: fixed;
+	width: 1100px;
+	background-color: $abu-abu-2;
+	z-index: 1;
+}
+
+#keranjang-label {
 	font-family: $primary-font;
-	font-style: normal;
 	font-weight: bold;
-	font-size: 20px;
-	line-height: 27px;
+	font-size: 24px;
+	color: $abu-abu-gelap;
+	margin-top: 25px;
+}
+
+#left-container {
+	position: relative;
+}
+
+#right-fixed {
+	position: fixed;
+}
+#right-container {
+	position: relative;
+}
+
+.bg-10 {
+	background-color: $abu-abu;
+	width: 100%;
+	z-index: 600;
+}
+#asd {
+	overflow: hidden;
+	/*overflow-y: scroll;*/
+}
+
+#scrollable-div {
+	position: relative;
+	width: 62%;
+	margin-top: 180px;
+	border: solid yellowgreen 0px;
+	overflow-y: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#scrollable-div::-webkit-scrollbar {
+	display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#scrollable-div {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
+
+#div-cart-price {
+	position: fixed;
+	border: solid blueviolet 0px;
+	top: 300px;
+	right: 0px;
+	height: 800px;
+	padding-bottom: 300px;
+}
+
+#div-top-address {
+	position: fixed;
+	width: 100%;
+	z-index: 9999;
+	top: 80px;
+	z-index: 1000;
+	background-color: #e5e5e5;
+}
+
+.info-widget {
+	width: 31.75%;
+	border: 1px solid black;
+	display: inline-block;
+}
+
+.middle {
+	float: left;
+	width: 90%;
+	overflow: auto;
+	/*will change this to hidden later to deny scolling to user*/
+	white-space: nowrap;
+}
+
+.info-widget {
+	width: 100%;
+	border: 1px solid black;
+	display: inline-block;
+}
+
+.middle {
+	float: left;
+	width: 90%;
+	overflow: auto;
+	/*will change this to hidden later to deny scolling to user*/
+	white-space: nowrap;
+}
+
+.cahgne-list-btn {
+	margin: 15px;
+	padding: 8px 16px;
+}
+
+.list-with-scroll {
 	display: flex;
+}
+
+.list {
+	flex-grow: 1;
+	display: flex;
+	overflow-x: scroll;
+}
+
+.list::-webkit-scrollbar {
+	display: none;
+}
+
+.item {
+	min-width: 180px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
 	align-items: center;
-	font-feature-settings: 'kern' off;
+	border-radius: 5px;
+	margin-top: 3px;
+}
 
-	/* #606060 */
+.scroll-button,
+.scroll-button:hover {
+	min-width: 40px;
+	font-size: 28px;
+	box-shadow: none;
+	border: none;
+	border-radius: 0px;
+	background-color: transparent;
+	// background-color: #3f51b5;
+	// color: #fff;
+}
 
-	color: #606060;
+.disable,
+.disable:hover {
+	// background-color: rgba(0,0,0,.12);
+	// color: rgba(0,0,0,.26);
+	border: none;
+}
+
+#scroll-left {
+	order: -1; /* To pevent ExpressionChangedAfterItHasBeenCheckedError */
+}
+
+#horizontal-line {
+	height: 1px;
+	width: 100%;
+	background-color: #a9a9a9;
 }
