--- a/src/app/modules/transaction/components/badge/badge.component.scss
+++ b/src/app/modules/transaction/components/badge/badge.component.scss
@@ -20,7 +20,9 @@
 .noshowing{
 	display:none;
 }
-
+.noshowicon{
+	display:none;
+}
 .label-icon{
 	width:100%;
 	position: relative;
@@ -36,7 +38,9 @@
 }
 
 .showing{
-	// display:none;
+	text-decoration: none;
+}
+.showicon{
 	text-decoration: none;
 }
 
