--- a/src/app/modules/approval/components/filter-date/filter-date.component.html
+++ b/src/app/modules/approval/components/filter-date/filter-date.component.html
@@ -13,6 +13,6 @@
 		</div>
 	</div>
 	<div ngbDropdownMenu>
-		<nest-datepicker-a></nest-datepicker-a>
+		<nest-datepicker-b></nest-datepicker-b>
 	</div>
 </div>
