--- a/src/app/shared/components/box-cart-price/box-cart-price.component.html
+++ b/src/app/shared/components/box-cart-price/box-cart-price.component.html
@@ -1,13 +1,16 @@
 <div id="div-price-top"
 	class="d-flex align-items-center justify-content-between">
-	<div>Kredit Tersedia</div>
-	<div>Rp. 99.999.999</div>
+	<div class="font1">Kredit Tersedia</div>
+	<div class="d-flex justify-content-between harga-per-item">
+		<div class="font1">Rp</div>
+		<div class="font1">99.999.999</div>
+	</div>
 </div>
 <div id="div-price-below">
 	<div class="d-flex justify-content-between">
 		<div class="font1">Total Belanja</div>
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1">Rp.</div>
+			<div class="font1">Rp</div>
 			<div class="font1">73.500.000</div>
 		</div>
 
@@ -19,7 +22,7 @@
 		<div class="font1">Fee</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1">Rp.</div>
+			<div class="font1">Rp</div>
 			<div class="font1">500.000</div>
 		</div>
 	</div>
@@ -31,7 +34,7 @@
 	<div class="d-flex justify-content-between">
 		<div class="font2">Sub Total</div>
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font2">Rp.</div>
+			<div class="font2">Rp</div>
 			<div class="font2">74.000.000</div>
 		</div>
 	</div>
@@ -42,7 +45,7 @@
 		<div class="font1">PPN</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1">Rp.</div>
+			<div class="font1">Rp</div>
 			<div class="font1">7.400.000</div>
 		</div>
 	</div>
@@ -50,10 +53,10 @@
 	<wsv wide="10px"></wsv>
 
 	<div class="d-flex justify-content-between">
-		<div class="font1">PPH 23</div>
+		<div class="font1">PPh 23</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1">Rp.</div>
+			<div class="font1">Rp</div>
 			<div class="font1">-148.000</div>
 		</div>
 	</div>
@@ -64,7 +67,7 @@
 		<div class="font1">Total Ongkos Kirim</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div class="font1">Rp.</div>
+			<div class="font1">Rp</div>
 			<div class="font1">1.000.000</div>
 		</div>
 	</div>
@@ -78,7 +81,7 @@
 		<div id="label-ringkasan">Grand Total</div>
 
 		<div class="d-flex justify-content-between harga-per-item">
-			<div id="label-ringkasan">Rp.</div>
+			<div id="label-ringkasan">Rp</div>
 			<div id="label-ringkasan">82.252.000</div>
 		</div>
 	</div>
