--- a/src/app/modules/approval/components/item-list-section/item-list-section.component.html
+++ b/src/app/modules/approval/components/item-list-section/item-list-section.component.html
@@ -1,4 +1,4 @@
 <div *ngFor="let item of items">
-	<item-approval></item-approval>
+	<item-approval [item]="item"></item-approval>
 	<wsv wide="20px"></wsv>
 </div>
