--- a/src/app/modules/approval/components/item-approval/item-approval.component.html
+++ b/src/app/modules/approval/components/item-approval/item-approval.component.html
@@ -4,7 +4,8 @@
 			class="d-flex align-items-center">
 			<div id="purchaser-col-1"
 				class="d-flex align-items-center">
-				<check-box-round [checked]="true"
+				<check-box-round [checked]="isItemChecked()"
+					(click)="item.cart = !item.cart"
 					allowChanges="true"></check-box-round>
 				<wsh wide="8.54px"></wsh>
 				<div id="purchaser-col-1">
@@ -19,7 +20,7 @@
 					class="d-flex align-items-center">
 					<div>
 						<div class="label-gray">Ongkos Kirim</div>
-						<div class="label-gray-2">Rp. 1.000.000</div>
+						<div class="label-gray-2">Rp 1.000.000</div>
 					</div>
 				</div>
 
@@ -27,7 +28,7 @@
 					class="d-flex align-items-center">
 					<div>
 						<div class="label-gray d-flex flex-row-reverse">Ongkos Kirim</div>
-						<div class="d-flex flex-row-reverse label-gray-2">Rp. 1.000.000</div>
+						<div class="d-flex flex-row-reverse label-gray-2">Rp 1.000.000</div>
 					</div>
 				</div>
 			</div>
