--- a/src/app/modules/approval/pages/approval-layout/approval-layout.component.scss
+++ b/src/app/modules/approval/pages/approval-layout/approval-layout.component.scss
@@ -159,3 +159,13 @@
 	width: 100%;
 	background-color: #a9a9a9;
 }
+
+#pilih-semua {
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 19px;
+
+	color: $color-primary;
+}
