--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -108,6 +108,10 @@ ngb-datepicker {
 		display: none;
 	}
 
+	.ngb-dp-month-name {
+		display: none;
+	}
+
 	.ngb-dp-weekdays {
 		border-bottom: 0;
 		background-color: transparent;
