--- a/src/app/shared/components/nest-datepicker-b/nest-datepicker-b.component.scss
+++ b/src/app/shared/components/nest-datepicker-b/nest-datepicker-b.component.scss
@@ -1,3 +1,6 @@
+@import '../../../../styles/variables/colors';
+@import '../../../../styles/variables/fonts';
+
 #date-picker-wrapper {
 	width: 485px;
 	background: #ffffff;
@@ -15,4 +18,35 @@
 	grid-template-columns: auto auto;
 	grid-column-gap: 1rem;
 	grid-row-gap: 0.5rem;
+}
+
+.month-name {
+	font-family: $primary-font;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 19px;
+	/* identical to box height */
+
+	display: flex;
+	align-items: center;
+	text-align: center;
+
+	/* light Grey */
+
+	color: #a9a9a9;
+}
+
+.arrow_size {
+	width: 6px;
+	height: 10.35px;
+}
+
+.custom-day {
+	text-align: center;
+	padding: 0.3rem 0.25rem;
+	display: inline-block;
+	height: 2rem;
+	width: 2rem;
+	color: $abu-abu-gelap;
 }
